--- a/it/LC_MESSAGES/vk-music-bot.po
+++ b/it/LC_MESSAGES/vk-music-bot.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 18:31+0200\n"
+"PO-Revision-Date: 2019-06-01 18:48+0100\n"
 "Last-Translator: Xx_Crazyminer_xX\n"
 "Language-Team: English\n"
 "Language: it\n"
@@ -19,13 +19,12 @@ msgstr "Attendi, il tuo audio sta arrivando..."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
-msgstr "⛔️ La canzone è stata rimossa dai proprietari del copyright"
+msgstr "⛔️ La canzone è stata rimossa dai detentori dei diritti d'autore"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
 msgstr ""
-"Ricevuto! Nota: potrebbe volerci un pò di tempo prima che la canzone spunti "
-"nell'elenco"
+"Ricevuto! Nota: potrebbe volerci un pò di tempo prima che la canzone appaia"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
@@ -49,12 +48,12 @@ msgid ""
 "For just one donation we will gift your account with a *lifetime* premium "
 "status. There is a short list of premium features you will receive:"
 msgstr ""
-"Per una sola donazione ti regaleremo un account premium *per sempre*. Ecco "
-"un breve elenco di funzionalità premium che riceverai:"
+"Con una sola donazione ti regaleremo un account premium *a vita*. Ecco un "
+"breve elenco delle funzionalità premium che riceverai:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr "Niente più annunci e spam *per sempre*"
+msgstr "Niente più annunci e spam *a vita*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
@@ -70,15 +69,15 @@ msgstr "Un'opzione per cambiare la quantità di risultati"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr "Più opzioni facendo /settings"
+msgstr "Più opzioni con il comando /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
-"Iscriviti al nostro canale delle news per essere notificato all'uscita di "
-"nuove funzionalità: %(channel)s"
+"Iscriviti al nostro canale delle news per ricevere notifiche sulle nuove "
+"funzionalità: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
@@ -89,23 +88,22 @@ msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
-"Sei una brava persona che ci sostiene gentilmente, quindi ti abbiamo "
-"concesso un'account premium *per sempre*, divertiti"
+"Sei una brava persona che ci supporta, quindi ti abbiamo concesso un'account "
+"premium *a vita*, divertiti"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr "Questo è un breve elenco di funzioni premium che hai:"
+msgstr "Ecco un breve elenco delle funzioni premium di cui disponi:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr "Non sei ancora premium"
+msgstr "Non sei premium, per ora"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
-"Utilizza il comando /donate per supportarci e per diventare *per sempre* "
-"premium"
+"Utilizza il comando /donate per supportarci e diventare *a vita* premium"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
@@ -122,7 +120,8 @@ msgstr "🔥 Comandi"
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
-msgstr "Mandami un artista e/o un nome di canzone e troverò la musica per te!"
+msgstr ""
+"Mandami il nome di un artista e/o di una canzone e troverò la musica per te!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
@@ -130,7 +129,7 @@ msgstr "/song — Cerca una canzone per titolo"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr "/artist — Cerca una canzone per il nome dell'artista"
+msgstr "/artist — Cerca una canzone per artista"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
@@ -138,7 +137,7 @@ msgstr "/my — Mostra la tua playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr "/top — Mostra le canzoni popolari"
+msgstr "/top — Mostra le canzoni del momento"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
@@ -146,11 +145,11 @@ msgstr "/settings — Cambia le impostazioni"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr "/donate — Supporta gli autori"
+msgstr "/donate — Supporta gli sviluppatori"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr "/premium — Informazioni sul premium"
+msgstr "/premium — Informazioni account premium"
 
 #: handlers/help.py:26
 #, python-format
@@ -160,7 +159,7 @@ msgstr "Canale ufficiale delle news: %(channel)s"
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr "Informazioni di contatto: %(contact)s"
+msgstr "Contatti: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -169,7 +168,7 @@ msgstr "Non ho trovato niente 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr "Mostrati %(first)d-%(last)d di %(total)d\n"
+msgstr "Risultati %(first)d-%(last)d di %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
@@ -181,7 +180,7 @@ msgstr "Che artista stai cercando ?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
-msgstr "Devi cercare qualcosa prima 🐸"
+msgstr "Devi prima cercare qualcosa 🐸"
 
 #: handlers/search.py:308
 msgid "You're at the first page already"
@@ -207,7 +206,7 @@ msgstr "Mostra il bitrate: %s"
 #: handlers/settings.py:40
 #, python-format
 msgid "Like (heart) buttons: %s"
-msgstr "Bottone dei like(cuore): %s"
+msgstr "Mi piace (cuore): %s"
 
 #: handlers/settings.py:43
 #, python-format
@@ -217,7 +216,7 @@ msgstr "Didascalia nella modalità inline: %s"
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr "Mostra il formato audio: %s"
+msgstr "Mostra il formato del file: %s"
 
 #: handlers/settings.py:49
 #, python-format
@@ -234,7 +233,7 @@ msgstr "Per favore, seleziona la nuova lingua"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr "Aiutaci con una donazione(/donate) per accedere a questa funzione"
+msgstr "Aiutaci con una donazione (/donate) per accedere a questa funzione"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
