--- a/it/LC_MESSAGES/vk-music-bot.po
+++ b/it/LC_MESSAGES/vk-music-bot.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-01 16:38+0300\n"
-"PO-Revision-Date: 2019-06-01 18:31+0200\n"
+"PO-Revision-Date: 2019-06-01 20:10+0200\n"
 "Last-Translator: Xx_Crazyminer_xX\n"
 "Language-Team: English\n"
 "Language: it\n"
@@ -19,13 +19,13 @@ msgstr "Attendi, il tuo audio sta arrivando..."
 
 #: handlers/audio.py:134
 msgid "Song is removed by copyright owners"
-msgstr "⛔️ La canzone è stata rimossa dai proprietari del copyright"
+msgstr "La canzone è stata rimossa dai proprietari del copyright"
 
 #: handlers/docdb.py:64
 msgid "Got it! Note: it may take time for the song to appear in the search"
 msgstr ""
-"Ricevuto! Nota: potrebbe volerci un pò di tempo prima che la canzone spunti "
-"nell'elenco"
+"Ricevuto! Nota: potrebbe volerci un po' di tempo prima che la canzone appaia "
+"tra i risultati della ricerca"
 
 #: handlers/donation.py:43 handlers/donation.py:113 handlers/settings.py:52
 #: handlers/settings.py:72
@@ -42,7 +42,7 @@ msgid ""
 "for our servers."
 msgstr ""
 "Le tue donazioni ci aiutano a sviluppare nuove funzionalità, aumentare la "
-"stabilità e pagare i server."
+"stabilità e pagare server."
 
 #: handlers/donation.py:51 handlers/donation.py:131
 msgid ""
@@ -50,11 +50,11 @@ msgid ""
 "status. There is a short list of premium features you will receive:"
 msgstr ""
 "Per una sola donazione ti regaleremo un account premium *per sempre*. Ecco "
-"un breve elenco di funzionalità premium che riceverai:"
+"un breve elenco di benefici premium che riceverai:"
 
 #: handlers/donation.py:54 handlers/donation.py:134
 msgid "No more ads and spam to you, *forever*"
-msgstr "Niente più annunci e spam *per sempre*"
+msgstr "Niente più annunci e spam, *per sempre*"
 
 #: handlers/donation.py:55 handlers/donation.py:135
 msgid "An option to disable advertising inline captions"
@@ -70,15 +70,15 @@ msgstr "Un'opzione per cambiare la quantità di risultati"
 
 #: handlers/donation.py:58 handlers/donation.py:138
 msgid "More options under /settings command"
-msgstr "Più opzioni facendo /settings"
+msgstr "Più opzioni nel comando /settings"
 
 #: handlers/donation.py:60
 #, python-format
 msgid ""
 "Subscribe to our news channel to be notified of new features: %(channel)s"
 msgstr ""
-"Iscriviti al nostro canale delle news per essere notificato all'uscita di "
-"nuove funzionalità: %(channel)s"
+"Iscriviti al nostro canale delle news per ricevere una notifica all'uscita "
+"di nuove funzionalità: %(channel)s"
 
 #: handlers/donation.py:118
 msgid "You are a premium user!"
@@ -89,27 +89,26 @@ msgid ""
 "You're a good person who kindly supports us, so we granted you a *lifetime* "
 "premium status, enjoy it"
 msgstr ""
-"Sei una brava persona che ci sostiene gentilmente, quindi ti abbiamo "
-"concesso un'account premium *per sempre*, divertiti"
+"Sei una brava persona che ci sostiene gentilmente, quindi abbiamo deciso di "
+"regalarti un account premium *per sempre*, goditelo"
 
 #: handlers/donation.py:124
 msgid "There is a short list of premium features you have:"
-msgstr "Questo è un breve elenco di funzioni premium che hai:"
+msgstr "Questo è un breve elenco di funzionalità premium che hai:"
 
 #: handlers/donation.py:126
 msgid "You are not premium, yet"
-msgstr "Non sei ancora premium"
+msgstr "Non sei ancora un utente premium"
 
 #: handlers/donation.py:128
 msgid ""
 "Use /donate command to support us and get your *lifetime* premium status"
 msgstr ""
-"Utilizza il comando /donate per supportarci e per diventare *per sempre* "
-"premium"
+"Usa il comando /donate per supportarci e per diventare *per sempre* premium"
 
 #: handlers/favorites.py:34
 msgid "Added to your playlist (/my)"
-msgstr "Aggiunto alla tua playlist(/my)"
+msgstr "Aggiunto alla tua playlist (/my)"
 
 #: handlers/favorites.py:47
 msgid "Removed from your playlist"
@@ -122,35 +121,37 @@ msgstr "🔥 Comandi"
 #: handlers/help.py:17 handlers/start.py:37
 msgid ""
 "Just send me an artist and/or a song name and I will find music for you!"
-msgstr "Mandami un artista e/o un nome di canzone e troverò la musica per te!"
+msgstr ""
+"Inviami il nome di un artista e/o di una canzone e troverò la musica che fa "
+"per te!"
 
 #: handlers/help.py:18 handlers/start.py:38
 msgid "/song — search by song title"
-msgstr "/song — Cerca una canzone per titolo"
+msgstr "/song — cerca una canzone per titolo"
 
 #: handlers/help.py:19 handlers/start.py:39
 msgid "/artist — search for artist name"
-msgstr "/artist — Cerca una canzone per il nome dell'artista"
+msgstr "/artist — cerca una canzone per nome dell'artista"
 
 #: handlers/help.py:20
 msgid "/my — list your playlist"
-msgstr "/my — Mostra la tua playlist"
+msgstr "/my —mostra la tua playlist"
 
 #: handlers/help.py:21
 msgid "/top — popular songs"
-msgstr "/top — Mostra le canzoni popolari"
+msgstr "/top — canzoni popolari"
 
 #: handlers/help.py:22 handlers/start.py:41
 msgid "/settings — change settings"
-msgstr "/settings — Cambia le impostazioni"
+msgstr "/settings — cambia le impostazioni"
 
 #: handlers/help.py:23
 msgid "/donate — support authors"
-msgstr "/donate — Supporta gli autori"
+msgstr "/donate — supporta gli autori"
 
 #: handlers/help.py:24
 msgid "/premium — premium info"
-msgstr "/premium — Informazioni sul premium"
+msgstr "/premium — informazioni su premium"
 
 #: handlers/help.py:26
 #, python-format
@@ -160,7 +161,7 @@ msgstr "Canale ufficiale delle news: %(channel)s"
 #: handlers/help.py:27
 #, python-format
 msgid "Contact information: %(contact)s"
-msgstr "Informazioni di contatto: %(contact)s"
+msgstr "Contatti: %(contact)s"
 
 #: handlers/search.py:117 handlers/search.py:172
 msgid "I found nothing"
@@ -169,15 +170,15 @@ msgstr "Non ho trovato niente 😔"
 #: handlers/search.py:135
 #, python-format
 msgid "Results %(first)d-%(last)d of %(total)d\n"
-msgstr "Mostrati %(first)d-%(last)d di %(total)d\n"
+msgstr "Risultati %(first)d-%(last)d di %(total)d\n"
 
 #: handlers/search.py:213
 msgid "What song are you looking for?"
-msgstr "Che canzone stai cercando ?"
+msgstr "Che canzone stai cercando?"
 
 #: handlers/search.py:224
 msgid "What artist are you looking for?"
-msgstr "Che artista stai cercando ?"
+msgstr "Che artista stai cercando?"
 
 #: handlers/search.py:280 handlers/search.py:303
 msgid "You need to search for something before"
@@ -212,21 +213,21 @@ msgstr "Bottone dei like(cuore): %s"
 #: handlers/settings.py:43
 #, python-format
 msgid "Inline mode captions: %s"
-msgstr "Didascalia nella modalità inline: %s"
+msgstr "Didascalia del file audio: %s"
 
 #: handlers/settings.py:46
 #, python-format
 msgid "Show audio format: %s"
-msgstr "Mostra il formato audio: %s"
+msgstr "Mostra formato audio: %s"
 
 #: handlers/settings.py:49
 #, python-format
 msgid "Search results: %d"
-msgstr "Risultati di ricerca: %d"
+msgstr "Risultati della ricerca: %d"
 
 #: handlers/settings.py:54
 msgid "What would you like to change?"
-msgstr "Cosa ti piacerebbe cambiare?"
+msgstr "Cosa vorresti cambiare?"
 
 #: handlers/settings.py:74
 msgid "Please, select new language"
@@ -234,7 +235,7 @@ msgstr "Per favore, seleziona la nuova lingua"
 
 #: handlers/settings.py:83
 msgid "Please help us with a donation (/donate) to access this feature"
-msgstr "Aiutaci con una donazione(/donate) per accedere a questa funzione"
+msgstr "Aiutaci con una donazione (/donate) per accedere a questa funzione"
 
 #: handlers/settings.py:141
 msgid "Language settings updated"
@@ -242,15 +243,15 @@ msgstr "👌🇮🇹 Impostazioni della lingua aggiornate"
 
 #: handlers/start.py:40
 msgid "/setlang — change language"
-msgstr "/setlang — Cambia la lingua"
+msgstr "/setlang — cambia lingua"
 
 #: handlers/unknowncommand.py:27
 #, python-format
 msgid ""
 "Unknown command: %(command)s. Call /help for a list of available commands."
 msgstr ""
-"Comando sconosciuto: %(command)s. Esegui /help per vedere la lista dei "
-"comandi disponibili."
+"Comando sconosciuto: %(command)s. Usa /help per vedere la lista dei comandi "
+"disponibili."
 
 #~ msgid ""
 #~ "What artist are you looking for? For example «Lera Lynn» or «Wiz Khalifa»"
